app/components/Toggle/index.css
.toggle {
  display: inline-block;
  position: relative;
  border-radius: 7px;
  width: 50px;
  height: 40px;
  cursor: pointer;
  outline: none;

  box-shadow: 0px 2px 0px 0px var(--sci-darken-color) inset;

  background: var(--sci-toggle-color);

  transition: 0.15s ease-in-out;
  transition-property: background-color;
}

.thumbnail {
  position: absolute;
  top: 0;
  bottom: 2px;
  width: 60%;
  border-radius: 6px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 10px 5px;
  box-sizing: border-box;
  left: 0;
  transition: 0.15s ease-in-out;
  transition-property: left, transform;

  background-color: var(--sci-secondary-color);
  box-shadow: 0px 2px 0px 0px var(--sci-darken-color), 0px 2px 0px 0px var(--sci-secondary-color);
}

/*
 * I hate this, but I'm having issues getting just [checked] and :checked to work
 * React doesn't like treating boolean attributes like booleans it seems.
 */
.toggle[aria-checked="true"] > .thumbnail {
  left: 100%;
  transform: translateX(-100%);
}

